--- a/dashboard/application/app/views/widgets/_fasse_button.html.erb
+++ b/dashboard/application/app/views/widgets/_fasse_button.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= button_column_classes %>">
+<div class="launch-button-container">
   <div id="fasse-button" class="launch-button link-button">
     <a href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
       <div class="panel-body fasse-title">
