--- a/dashboard/application/app/views/widgets/_terminal_button.html.erb
+++ b/dashboard/application/app/views/widgets/_terminal_button.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= button_column_classes %>">
+<div class="launch-button-container">
   <div class="launch-button secondary-button">
     <a href="<%= terminal_url %>" target="_blank">
       <div class="panel-body terminal-image">
