feat(sid-dashboard): GH #467 Updated navigation links for Sid documentation

--- a/dashboard/application/app/views/layouts/nav/_sid_menu_items.html.erb
+++ b/dashboard/application/app/views/layouts/nav/_sid_menu_items.html.erb
@@ -1,15 +1,15 @@
 <li class="dropdown <%= class_value %>" title="sid about">
-  <a href="http://sid.harvard.edu/about">
+  <a href="https://www.iq.harvard.edu/research-computing#AboutSidNG">
     <i class="fas" aria-hidden="true"></i><span> About</span>
   </a>
 </li>
 <li class="dropdown <%= class_value %>" title="sid documentation">
-  <a href="http://sid.harvard.edu/documentation">
+  <a href="https://docs.rc.fas.harvard.edu/kb/sid-documentation/">
     <i class="fas" aria-hidden="true"></i><span> Documentation</span>
   </a>
 </li>
 <li class="dropdown <%= class_value %>" title="sid support">
-  <a href="http://sid.harvard.edu/support">
+  <a href="https://docs.rc.fas.harvard.edu/kb/getting-help-with-sid/">
     <i class="fas" aria-hidden="true"></i><span> Support</span>
   </a>
 </li>
