Revert "#487 - fixes after fasrc upgrade to OOD 2.0.12"

--- a/dashboard/application/app/views/layouts/nav/_group.html.erb
+++ b/dashboard/application/app/views/layouts/nav/_group.html.erb
@@ -9,7 +9,7 @@
           <li>
             <%=
               link_to(
-                map_nav_link?(app.name) ? sys_url(link.url.to_s) : link.url.to_s,
+                link.url.to_s,
                 title: map_nav_item(link.title),
                 target: link.new_tab? ? "_blank" : nil
               ) do
