--- a/dashboard/application/app/assets/stylesheets/quick_launch.scss
+++ b/dashboard/application/app/assets/stylesheets/quick_launch.scss
@@ -16,7 +16,7 @@ $launcher-color-brown: #DA6027;
 }
 
 #app-launcher-container {
-  .launch-button-container-flex {
+  .row {
     margin-bottom: 40px;
   }
 }
@@ -51,14 +51,6 @@ $launcher-color-brown: #DA6027;
   font-weight: 300;
 }
 
-
-.launch-button-container-flex {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-
-}
-
 .launch-button-spinner {
   display: flex;
   justify-content: center;
@@ -77,7 +69,6 @@ $launcher-color-brown: #DA6027;
 }
 .launch-button-container {
   position: relative;
-  width: 320px;
   height: 220px;
   margin-bottom: 20px;
 }
@@ -120,7 +111,7 @@ $launcher-color-brown: #DA6027;
 }
 
 .launch-button .panel-text {
-  padding: 0 20px 15px 15px;
+  padding: 0 20px 15px 20px;
   white-space: nowrap;
 }
 
