--- a/dashboard/application/app/assets/stylesheets/application.css.scss
+++ b/dashboard/application/app/assets/stylesheets/application.css.scss
@@ -221,6 +221,7 @@ pre.motd-monospaced {
 @import "batch_connect/session_contexts";
 @import "spinner";
 @import "quick_launch";
+@import "copy_session_info";
 @import "insufficient_quota";
 @import "insufficient_balance";
 @import "fa_shims";
