feat(landing-page): gh #328 Added new homepage for sid.harvard.edu site

--- a/sid-landing-site/src/styles/elements/footerFeatures.scss
+++ b/sid-landing-site/src/styles/elements/footerFeatures.scss
@@ -9,7 +9,7 @@
   padding: 2rem 5rem;
 
   h3 {
-      background-image: url('../assets/iqss_logo_small.png');
+      background-image: url('../../assets/iqss_logo_small.png');
       background-size: 200px 53px;
       display: inline-block;
       width: 200px;
