--- a/sid-landing-site/src/styles/elements/sidConnect.scss
+++ b/sid-landing-site/src/styles/elements/sidConnect.scss
@@ -16,7 +16,7 @@ a.sid-connect {
     }
 
     span.connect-icon::after {
-        background-image: url('../assets/sid_logo.png');
+        background-image: url('../../assets/sid_logo.png');
         background-size: 65px 36px;
         position: absolute;
         top: -5px;
