--- a/sid-landing-site/src/styles/index.scss
+++ b/sid-landing-site/src/styles/index.scss
@@ -1,113 +1,3 @@
-@import './media.scss';
-@import './hamburger.scss';
-@import './learnMoreLink.scss';
-@import './header.scss';
-@import './footer.scss';
-@import './footerFeatures.scss';
-@import './home.scss';
-@import './about.scss';
-@import './documentation.scss';
-@import './support.scss';
-@import './notfound.scss';
-
-@import './sidConnect.scss';
-
-:root {
-  --color-page-background: #fff;
-  --color-main-brown: #DA6027;
-  --color-status-background: #EED0C0;
-  --color-main-background: #F9F9F9;
-  --color-footer-background: #000;
-  --color-footer-text: #fff;
-  --color-main-borderline: #7D7B79;
-  --color-main-text: #808080;
-  --color-feature-title: #255A8E;
-  --color-feature-text: #555;
-  --color-logo-main: #009CD2;
-}
-
-html {
-  font: 300 62.5% "Lora", sans-serif;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family:
-    'Lora',
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: black;
-  font-size: 1.4rem;
-}
-
-@media (max-width: 600px) {
-  body {
-    font-size: 1rem;
-  }
-}
-
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
-}
-
-.content-hide {
-  position: absolute;
-  left: -1000px
-}
-
-.btn-hover-effect:hover {
-  transform: scale(0.96);
-}
-
-.link-hover-effect::after {
-  content: '';
-  position: absolute;
-  background-color: currentColor;
-  width: 100%;
-  height: 2px;
-  left: 0;
-  bottom: 0;
-  transform: scale(0, 1);
-  transition: transform 0.2s ease;
-}
-
-.link-hover-effect:hover::after {
-  transform: scale(1, 1)
-}
-
-h2.page-title {
-  padding: 4rem 0;
-  font-size: 4.5rem;
-  font-weight: normal;
-  color: var(--color-main-brown);
-  white-space: nowrap;
-}
-
-h3.section-title {
-  padding: 4rem 0;
-  font-size: 3.5rem;
-  font-weight: normal;
-  color: var(--color-feature-title);
-  white-space: nowrap;
-}
+@import './base/index.scss';
+@import './elements/index.scss';
+@import './pages/index.scss';
