--- a/sid-landing-site/src/styles/elements/footer.scss
+++ b/sid-landing-site/src/styles/elements/footer.scss
@@ -1,33 +1,30 @@
 footer {
   background-color: var(--color-main-background);
   //border-top: 2px solid var(--color-main-borderline);
-  padding-top: 2rem;
 
   nav.footer-copy {
-    padding: 1rem 5rem;
+    padding: 2rem 5rem;
     background-color: var(--color-footer-background);
 
     ul {
       display: flex;
+      gap: 1em;
       flex-wrap: wrap;
       justify-content: space-between;
-      align-items: left;
       list-style-type: none;
       color: var(--color-footer-text);
       font-weight: 500;
-      white-space: nowrap;
       //max-width: 1000px;
       margin: 0 auto;
 
       li {
-        padding: 1rem 0;
+        flex-grow: 1;
+        text-align: center;
       }
 
       @media (max-width: 1100px) {
         li.copyright {
           flex-basis: 100%;
-          flex-grow: 1;
-          text-align: center;
         }
       }
 
