--- a/sid-landing-site/src/styles/elements/header.scss
+++ b/sid-landing-site/src/styles/elements/header.scss
@@ -37,20 +37,6 @@
         transform: translate(0, 10px);
     }
 
-    @media (max-width: 880px) {
-        padding: 2rem 1rem 1rem 4rem;
-
-        h1 {
-            font-size: 4rem;
-        }
-
-        h1 a::after {
-            background-size: 90px 50px;
-            width: 90px;
-            height: 50px;
-        }
-    }
-
     nav {
         flex-grow: 1;
         padding: 2px 0 2px 1rem;
@@ -76,6 +62,25 @@
             text-decoration: none;
             white-space: nowrap;
             color: var(--color-main-text);
+        }
+    }
+
+
+    @media (max-width: $screen-lg) {
+        padding: 2rem 1rem 1rem 4rem;
+
+        h1 {
+            font-size: 4rem;
+        }
+
+        h1 a::after {
+            background-size: 90px 50px;
+            width: 90px;
+            height: 50px;
+        }
+
+        ul {
+            font-size: 2rem;
         }
     }
 
