--- a/dashboard/application/app/assets/stylesheets/spinner.css
+++ b/dashboard/application/app/assets/stylesheets/spinner.css
@@ -43,3 +43,26 @@
     width: 1rem;
     height: 1rem;
 }
+
+/**CUSTOM FULL PAGE SPINNER*/
+#full-page-spinner {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 10;
+}
+#full-page-spinner .spinner-border{
+    display: block;
+    color: #fff;
+    width: 100px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40vh;
+}
+body.modal-open {
+    overflow: hidden;
+}
