--- a/dashboard/application/app/views/layouts/nav/_help_dropdown.html.erb
+++ b/dashboard/application/app/views/layouts/nav/_help_dropdown.html.erb
@@ -3,6 +3,7 @@
     <i class="fas fa-question-circle" aria-hidden="true"></i><span class="sid-nav-lg-hidden"> <%= t('dashboard.nav_help_title') %></span><span class="caret"></span>
   </a>
   <ul class="dropdown-menu">
+    <%= nav_link('Submit support ticket', "medkit", support_path) %>
     <%= nav_link(t('dashboard.nav_help_support'), "question-circle", support_url, target: "_blank") %>
     <%= nav_link(t('dashboard.nav_help_docs'), "info-circle", docs_url, target: "_blank") %>
     <%= nav_link(t('dashboard.nav_help_change_password'), "key", passwd_url, target: "_blank") %>
