--- a/dashboard/application/app/views/layouts/_footer.html.erb
+++ b/dashboard/application/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-3 col-sm-4">
         <%= link_to "https://osc.github.io/Open-OnDemand/" do %>
           <%= image_tag(
                 "OpenOnDemand_powered_by_RGB.svg",
@@ -12,7 +12,7 @@
               ) %>
         <% end %>
       </div>
-      <div class="col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-3 col-sm-4">
         <%= link_to "https://vdi.rc.fas.harvard.edu/pun/sys/dashboard" do %>
           <%= image_tag(
                 "fasrc_logo.jpg",
@@ -23,7 +23,7 @@
               ) %>
         <% end %>
       </div>
-      <div class="col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-3 col-sm-4">
         <%= link_to "https://www.iq.harvard.edu/" do %>
           <%= image_tag(
                 "iqss_logo.png",
@@ -33,6 +33,12 @@
                 style: "margin-bottom: 20px; max-height: 40px;"
               ) %>
         <% end %>
+      </div>
+      <div class="col-lg-2 col-md-3 col-sm-4">
+        <span class="footer_version">OnDemand version: <%= Configuration.ood_version %></span>
+      </div>
+      <div class="col-lg-2 col-md-3 col-sm-4">
+        <span class="footer_version">Sid version: <%= Configuration.app_version %></span>
       </div>
     </div>
   </div><!-- /.container -->
