feat(dashboard): gh #450 Added FASRC cluster status to Sid homepage

--- a/dashboard/application/app/assets/stylesheets/application.css.scss
+++ b/dashboard/application/app/assets/stylesheets/application.css.scss
@@ -220,6 +220,7 @@ pre.motd-monospaced {
 @import "products";
 @import "batch_connect/sessions";
 @import "batch_connect/session_contexts";
+@import "hpc_status";
 @import "spinner";
 @import "support_ticket";
 @import "quick_launch";
