--- a/dashboard/application/app/views/quick_launch/_docs.html.erb
+++ b/dashboard/application/app/views/quick_launch/_docs.html.erb
@@ -51,11 +51,8 @@
           You can find information on our <a href="https://www.rc.fas.harvard.edu/maintenance" target="_blank">monthly planned maintenance window at this page.</a>
         </p>
 
-        <% @announcements.select(&:valid?).each do |announcement| %>
-          <div class="announcement">
-            <%= raw OodAppkit.markdown.render(announcement.msg) %>
-          </div>
-        <% end %>
+        <%= render partial: "shared/hpc_status" %>
+
       </section>
     </div>
 
