--- a/sid-landing-site/src/styles/elements/header.scss
+++ b/sid-landing-site/src/styles/elements/header.scss
@@ -27,7 +27,7 @@
     }
 
     h1 a::after {
-        background-image: url('../assets/sid_logo.png');
+        background-image: url('../../assets/sid_logo.png');
         background-size: 117px 65px;
         display: inline-block;
         width: 117px;
@@ -35,18 +35,6 @@
         content: '';
         position: relative;
         transform: translate(0, 10px);
-    }
-
-    @media (max-width: 780px) {
-        h1 {
-            font-size: 4rem;
-        }
-
-        h1 a::after {
-            background-size: 90px 50px;
-            width: 90px;
-            height: 50px;
-        }
     }
 
     nav {
@@ -74,6 +62,25 @@
             text-decoration: none;
             white-space: nowrap;
             color: var(--color-main-text);
+        }
+    }
+
+
+    @media (max-width: $screen-lg) {
+        padding: 2rem 1rem 1rem 4rem;
+
+        h1 {
+            font-size: 4rem;
+        }
+
+        h1 a::after {
+            background-size: 90px 50px;
+            width: 90px;
+            height: 50px;
+        }
+
+        ul {
+            font-size: 2rem;
         }
     }
 
