feat(landing-page): gh #328 Added new homepage for sid.harvard.edu site

--- a/dashboard/application/app/assets/stylesheets/application.css.scss
+++ b/dashboard/application/app/assets/stylesheets/application.css.scss
@@ -213,6 +213,15 @@ pre.motd-monospaced {
   border-width: 0 0 3px;
   border-color: transparent;
 }
+
+.footer_version {
+  display: block;
+  min-height: 40px;
+  margin: 10px auto;
+  text-align: center;
+  white-space: nowrap;
+}
+
 // $fa-font-path: "fontawesome/fonts";
 @import "dashboard";
 @import "navbar";
@@ -220,6 +229,7 @@ pre.motd-monospaced {
 @import "products";
 @import "batch_connect/sessions";
 @import "batch_connect/session_contexts";
+@import "hpc_status";
 @import "spinner";
 @import "support_ticket";
 @import "quick_launch";
