feat(dashboard): gh #598 Added custom launchers and quick links per HPC cluster

--- a/dashboard/application/app/assets/stylesheets/quick_launch.scss
+++ b/dashboard/application/app/assets/stylesheets/quick_launch.scss
@@ -193,7 +193,7 @@ $launcher-color-brown: #DA6027;
   text-align: center;
 }
 
-#fasse-button p {
+.link-connect-button p {
   margin: 0;
   padding: 0 15px;
 }
