--- a/dashboard/application/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_launch_button.html.erb
@@ -16,7 +16,7 @@
       <p class="title-text"><%= launcher_button[:p1].html_safe || "&nbsp;".html_safe %></p>
       <p class="small-text"><%= launcher_button[:p2] || "&nbsp;".html_safe %></p>
       <p class="small-text"><%= launcher_button[:p3] || "&nbsp;".html_safe %></p>
-      <p class="small-text">Cannon cluster</p>
+      <p class="small-text"><%= launcher_button[:p4] || "&nbsp;".html_safe %></p>
     </div>
   </div>
 </div>
