--- a/dashboard/application/app/views/widgets/_terminal_button.html.erb
+++ b/dashboard/application/app/views/widgets/_terminal_button.html.erb
@@ -1,5 +1,5 @@
 <div class="launch-button-container">
-  <div class="launch-button secondary-button">
+  <div id="link-terminal-button" class="launch-button secondary-button">
     <a href="<%= terminal_url %>" target="_blank">
       <div class="panel-body terminal-image">
         <img src="<%= asset_url 'term_logo.svg' %>" alt="Application logo" width="125" class="center-block"  style="margin-top: 5x;"/>
