feat(dashboard): gh #598 Added support for launcher color configuration to match cluster

--- a/dashboard/application/app/assets/stylesheets/quick_launch.scss
+++ b/dashboard/application/app/assets/stylesheets/quick_launch.scss
@@ -170,7 +170,7 @@ $launcher-color-brown: #DA6027;
   display: flex;
 }
 
-.launch-button .fasse-title{
+.launch-button .link-button-title-wrapper{
   height: 140px;
   overflow: hidden;
   padding-top: 40px;
