--- a/dashboard/application/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_launch_button.html.erb
@@ -8,7 +8,7 @@
   <div class="launch-button-spinner" style="display: none;">
     <div class="spinner-border" role="status"></div>
   </div>
-  <div class="launch-button">
+  <div class="launch-button" style="border-color: <%= launcher_button[:color] || "#2D9BF0" %>;">
     <div class="panel-body panel-image">
       <img src="<%= asset_url launcher_button[:logo] %>" alt="Application logo" width="<%= launcher_button[:logoWidth] || 200 %>" class="center-block"  style="<%= launcher_button[:style] || '' %>"/>
     </div>
