--- a/dashboard/application/app/views/widgets/_cannon_button.html.erb
+++ b/dashboard/application/app/views/widgets/_cannon_button.html.erb
@@ -1,8 +1,8 @@
 <div class="launch-button-container">
-  <div id="link-cannon-button" class="launch-button link-button link-connect-button">
+  <div id="link-cannon-button" class="launch-button link-button link-connect-button" style="border-color: #2D9BF0;">
     <a href="https://vdi.rc.fas.harvard.edu/" target="_blank">
-      <div class="panel-body fasse-title">
-        <p class="link-button-title">Low Risk Data</p>
+      <div class="panel-body link-button-title-wrapper">
+        <p class="link-button-title" style="color: #2D9BF0;">Low Risk Data</p>
         <p class="link-button-subtitle">Up to Harvard Level 2</p>
       </div>
       <p class="title-text">Connect to Cannon</p>
