#598 and #602 - Added custom launchers, quick links, and banner per HPC cluster (#35)
* feat(dashboard): gh #598 Added custom launchers and quick links per HPC cluster

* Update README.md

the Sid Dashboard is now expected to be working

* Update README.md

Note that launching apps in the default dashboard is currently broken in Local Development environments.

* fix(build): gh #598 fixed OOD dashboard session cookie creation for HTTP

* feat(dashboard): gh #598 Added support for launcher color configuration to match cluster

* feat(dashboard): gh #602 Added cluster banner + updated look and feel for delete button

* chore(dashboard): GH #598 document launcher view.color param

* fix(build): gh #598 fixed banner configuration after branch merge

* chore(dashboard): GH #602 fix typo in Cannon cluster banner message

Co-authored-by: William Horka <whorka@hmdc.harvard.edu>

--- a/dashboard/application/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_launch_button.html.erb
@@ -8,7 +8,7 @@
   <div class="launch-button-spinner" style="display: none;">
     <div class="spinner-border" role="status"></div>
   </div>
-  <div class="launch-button">
+  <div class="launch-button" style="border-color: <%= launcher_button[:color] || "#2D9BF0" %>;">
     <div class="panel-body panel-image">
       <img src="<%= asset_url launcher_button[:logo] %>" alt="Application logo" width="<%= launcher_button[:logoWidth] || 200 %>" class="center-block"  style="<%= launcher_button[:style] || '' %>"/>
     </div>
@@ -16,7 +16,7 @@
       <p class="title-text"><%= launcher_button[:p1].html_safe || "&nbsp;".html_safe %></p>
       <p class="small-text"><%= launcher_button[:p2] || "&nbsp;".html_safe %></p>
       <p class="small-text"><%= launcher_button[:p3] || "&nbsp;".html_safe %></p>
-      <p class="small-text">Cannon cluster</p>
+      <p class="small-text"><%= launcher_button[:p4] || "&nbsp;".html_safe %></p>
     </div>
   </div>
 </div>
