--- a/dashboard/application/app/views/widgets/_fasse_button.html.erb
+++ b/dashboard/application/app/views/widgets/_fasse_button.html.erb
@@ -1,7 +1,7 @@
 <div class="launch-button-container">
-  <div id="fasse-button" class="launch-button link-button">
+  <div id="link-fasse-button" class="launch-button link-button link-connect-button">
     <a href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
-      <div class="panel-body fasse-title">
+      <div class="panel-body link-button-title-wrapper">
         <p class="link-button-title">Medium Risk Data</p>
         <p class="link-button-subtitle">Harvard Level 3</p>
       </div>
