--- a/dashboard/application/app/assets/stylesheets/quick_launch.scss
+++ b/dashboard/application/app/assets/stylesheets/quick_launch.scss
@@ -34,6 +34,29 @@ $launcher-color-brown: #DA6027;
     width: 120px;
     margin-top: -25px;
   }
+
+  span {
+    font-size: 20px;
+    font-weight: normal;
+    vertical-align: 2px;
+  }
+
+  @media (max-width: 1100px) {
+    span {
+      display: block;
+      padding-top: 5px;
+    }
+  }
+
+  @media (max-width: 520px) {
+    h2 {
+      font-size: 40px;
+    }
+
+    span {
+      font-size: 14px;
+    }
+  }
 }
 
 .quick-launch-buttons-title {
@@ -170,7 +193,7 @@ $launcher-color-brown: #DA6027;
   display: flex;
 }
 
-.launch-button .fasse-title{
+.launch-button .link-button-title-wrapper{
   height: 140px;
   overflow: hidden;
   padding-top: 40px;
@@ -193,7 +216,7 @@ $launcher-color-brown: #DA6027;
   text-align: center;
 }
 
-#fasse-button p {
+.link-connect-button p {
   margin: 0;
   padding: 0 15px;
 }
