--- a/dashboard/application/app/assets/stylesheets/hpc_status.scss
+++ b/dashboard/application/app/assets/stylesheets/hpc_status.scss
@@ -1,3 +1,7 @@
+.cluster-status-component {
+  line-height: 1.6;
+}
+
 .status-container {
   padding-top: .5em;
 }
@@ -17,7 +21,7 @@
 .hpc-status {
   position: relative;
   padding: .3em 0;
-  font-size: 1.1em;
+  font-size: 18px;
   text-align: center;
   background: #fff;
   border: 3px solid #fff;
