--- a/dashboard/application/app/views/quick_launch/index.html.erb
+++ b/dashboard/application/app/views/quick_launch/index.html.erb
@@ -7,6 +7,8 @@
 
 </script>
 <div id="app-launcher-container">
+  <%= render partial: "shared/hpc_status", locals: { type: 'hpc-issues' } %>
+
   <div id="launch-button-error" class="alert alert-danger alert-dismissable" role="alert" style="display: none;">
     <button type="button" class="close" data-dismiss="alert">
       <span aria-hidden="true">&times;</span>
