--- a/ondemand/config/views/widgets/sid/_fasse_button.html.erb
+++ b/ondemand/config/views/widgets/sid/_fasse_button.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-md-4 col-lg-3">
+<div id="link-fasse-button" class="col-sm-6 col-md-4 col-lg-3">
   <div class="app-launcher app-launcher-hover">
     <a class="quick-link launcher-click fasse" href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
       <div class="quick-link-header-text">
