--- a/ondemand/config/views/widgets/sid/_terminal_button.html.erb
+++ b/ondemand/config/views/widgets/sid/_terminal_button.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-md-4 col-lg-3">
+<div id="link-terminal-button" class="col-sm-6 col-md-4 col-lg-3">
   <div class="app-launcher app-launcher-hover">
     <a class="quick-link launcher-click gray" href="<%= OodApp.new(Router.router_from_token('sys/shell')).links.first.url %>" target="_blank">
       <div class="quick-link-header-image">
