feat(pearc23): configuration updates for the PEARC23 demo

--- a/ondemand/apps/Jupyter/form.yml.erb
+++ b/ondemand/apps/Jupyter/form.yml.erb
@@ -1,6 +1,6 @@
 ---
 title: "Jupyter notebook / Jupyterlab"
-cluster: "odyssey3"
+cluster: "dev-cluster"
 attributes:
   bc_queue: 
     value: "shared"
