--- a/ondemand/apps/Jupyter/form.yml.erb
+++ b/ondemand/apps/Jupyter/form.yml.erb
@@ -95,22 +95,8 @@ attributes:
       Account to charge for this job (--account). This will default to your main account (primary group). More information about [multiple slurm accounts here](https://docs.rc.fas.harvard.edu/kb/fairshare/#Multiple_Accounts).
   working_folder:
     label: 'Working Directory'
-    data-filepicker: true
-    # Optionally show dot files and folders; defaults to false
-    data-show-hidden: true
-    # Optionally permit selection of only files or directories; defaults to both
-    data-target-file-type: dirs  # Valid values are: files, dirs, or both
-    # Optionally specify a pattern for the name of selectable files or directories; defaults to matching anything
-    # Uses JavaScript regular expressions: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp
-    #data-target-file-pattern: \.py$  # python files
-    # Optionally provide FS favorites manually
-    data-file_picker_favorites: '[{"title": "Global Scratch", "href": "/n/holyscratch01/<%= OodSupport::User.new.group.name %>"},{"title": "Home Folder", "href": "<%= OodSupport::User.new.home %>"}]'
-    # Optionally set a default directory
-    # data-default-directory: '~' 
-    # Optionally only allow editing through the file picker; defaults to false
-    readonly: true
-    # Optionally set a static starting directory by setting the value
-    # value: '<%= OodSupport::User.new.home %>'
+    widget: text_field
+    value: '<%= OodSupport::User.new.home %>'
 
 form:
   - bc_queue
