--- a/ondemand/apps/Stata/template/script.sh.erb
+++ b/ondemand/apps/Stata/template/script.sh.erb
@@ -14,46 +14,67 @@ cd $WORKDIR
 # Launch Xfce Window Manager and Panel
 #
 
-cat > myrun.sh <<EOF
-#!/bin/bash -l
-
-(
+# heredoc not necessary if not containerized
+#cat > myrun.sh <<EOF
+##!/bin/bash -l
+#
+#(
   export SEND_256_COLORS_TO_REMOTE=1
-  export XDG_CONFIG_HOME="<%= session.staged_root.join("config") %>"
-  export XDG_DATA_HOME="<%= session.staged_root.join("share") %>"
-  export XDG_CACHE_HOME="\$(mktemp -d)"
+# not necessary to eliminate Applications menu
+#  export XDG_CONFIG_HOME="<%= session.staged_root.join("config") %>"
+#  export XDG_DATA_HOME="<%= session.staged_root.join("share") %>"
+#  export XDG_CACHE_HOME="\$(mktemp -d)"
   set -x
-  xfwm4 --compositor=off --daemon --sm-client-disable
+  xfwm4 --compositor=off --sm-client-disable &
   xsetroot -solid "#D3D3D3"
-  xfsettingsd --sm-client-disable
-  xfce4-panel --sm-client-disable
-) &
+  xfsettingsd --sm-client-disable --daemon
+  (
+    # wait for the settings daemon to become available, or else the panel will not load its icons
+    while [ -z "$(dbus-send --session --dest=org.freedesktop.DBus --type=method_call --print-reply /org/freedesktop/DBus org.freedesktop.DBus.ListNames | grep -F \"org.xfce.SettingsDaemon\")" ]; do
+      sleep 1
+      set +x
+    done
+    set -x
+    xfce4-panel --sm-client-disable
+  ) &
+#) &
 
 
 # Load the required environment
 module load <%= context.stata_version %>
 
 <%- if  context.custom_num_cores.to_i == 1 -%>
-xstata-se
+COMMAND='xstata-se'
 <%- else -%>
-xstata-mp "set processors <%= context.custom_num_cores.to_i %>"
+COMMAND='xstata-mp "set processors <%= context.custom_num_cores.to_i %>"'
 <%- end -%>
 
+# set oom_score_adj to 1000 in job script (parent) so it app is terminated in
+# the event the rsession (child) OOMs to avoid the appearance of the app
+# continuing to function in OOD/Slurm with a 502 Proxy error on reconnect
+echo 1000 > /proc/self/oom_score_adj
+(
+  echo 0 > /proc/self/oom_score_adj
+  eval exec $COMMAND
+)
+
+# this script cannot exit or Slurm will think the job is done and kill child processes
 wait
-EOF
 
-chmod +x myrun.sh
-
-## am I trying to run on GPUs?
-export SING_GPU=""
-
-<%- if !context.custom_num_gpus.to_i.zero? -%>
-export SING_GPU="--nv"
-<%- end -%>
-
-## bind some extra stuff to be able to talk to slurm from within the container
-export SING_BINDS=" -B /etc/nsswitch.conf -B /etc/sssd/ -B /var/lib/sss -B /etc/slurm -B /slurm -B /var/run/munge  -B `which sbatch ` -B `which srun ` -B `which sacct ` -B `which scontrol `  -B `which scancel` -B `which squeue` -B `which sinfo`  -B /usr/lib64/slurm/ "
-
-# Load the required environment
-#export SINGULARITYENV_MATLAB_PREFDIR
-singularity exec   $SING_GPU $SING_BINDS /n/singularity_images/OOD/OdysseyRD/current/remote_desktop_082021.sif ./myrun.sh
+#EOF
+#
+#chmod +x myrun.sh
+#
+### am I trying to run on GPUs?
+#export SING_GPU=""
+#
+#<%- if !context.custom_num_gpus.to_i.zero? -%>
+#export SING_GPU="--nv"
+#<%- end -%>
+#
+### bind some extra stuff to be able to talk to slurm from within the container
+#export SING_BINDS=" -B /etc/nsswitch.conf -B /etc/sssd/ -B /var/lib/sss -B /etc/slurm -B /slurm -B /var/run/munge  -B `which sbatch ` -B `which srun ` -B `which sacct ` -B `which scontrol `  -B `which scancel` -B `which squeue` -B `which sinfo`  -B /usr/lib64/slurm/ "
+#
+## Load the required environment
+##export SINGULARITYENV_MATLAB_PREFDIR
+#singularity exec   $SING_GPU $SING_BINDS /n/singularity_images/OOD/OdysseyRD/current/remote_desktop_082021.sif ./myrun.sh
