--- a/ondemand/ondemand.d/fasrc.yml.erb
+++ b/ondemand/ondemand.d/fasrc.yml.erb
@@ -6,8 +6,8 @@ show_all_apps_link: false
 cancel_session_enabled: true
 navbar_type: dark
 dashboard_header_img_logo: "/public/static/images/fasrc_logo.png"
-brand_bg_color: "rgb(157,47,60)"
-brand_link_active_bg_color: "rgb(59, 61, 63)"
+brand_bg_color: "<%= @ood_bg_color %>"
+brand_link_active_bg_color: "<%= @ood_active_bg_color %>"
 disable_dashboard_welcome_message: true
 
 pinned_apps_group_by: "category"
