feat(ondemand): upgraded to OnDemand puppet module 4.5.0 and updated configuration

--- a/ondemand/application/dashboard/views/layouts/_footer.html.erb
+++ b/ondemand/application/dashboard/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
       <%= content_tag(
             :img,
             "",
-            src: "/public/static/images/fasrc_logo.jpg",
+            src: "/public/fasrc_logo.jpg",
             class: "footer-logo img-responsive center-block",
             alt: "FASRC",
             height: "40",
@@ -28,7 +28,7 @@
       <%= content_tag(
             :img,
             "",
-            src: "/public/static/images/iqss_logo.png",
+            src: "/public/iqss_logo.png",
             class: "footer-logo img-responsive center-block",
             alt: "IQSS",
             height: "40",
