--- a/ondemand/application/dashboard/views/widgets/sid/_terminal_button.html.erb
+++ b/ondemand/application/dashboard/views/widgets/sid/_terminal_button.html.erb
@@ -2,7 +2,7 @@
   <div class="app-launcher app-launcher-hover">
     <a class="quick-link launcher-click gray" href="<%= OodApp.new(Router.router_from_token('sys/shell')).links.first.url %>" target="_blank">
       <div class="quick-link-header-image">
-        <img title="terminal image" aria-hidden="true" src="/public/static/images/term_logo.svg">
+        <img title="terminal image" aria-hidden="true" src="/public/term_logo.svg">
       </div>
       <div class="quick-link-text">
         <p>Start a web based</p>
