feat(ondemand): added proposal or support ticket template fix

--- a/ondemand/ondemand.d.local/support_ticket.yml.erb
+++ b/ondemand/ondemand.d.local/support_ticket.yml.erb
@@ -10,6 +10,6 @@ support_ticket:
     - "<%= queue %>"
 <% end -%>
 <% end -%>
-<% unless @proxy_server.nil? -%>
-  proxy: "<%= @proxy_server %>"
+<% unless @rt_proxy_server.nil? -%>
+  proxy: "<%= @rt_proxy_server %>"
 <% end -%>
