feat(ondemand): fixed sid welcome message loggic cluster detection

--- a/ondemand/application/dashboard/views/widgets/sid/_util.html.erb
+++ b/ondemand/application/dashboard/views/widgets/sid/_util.html.erb
@@ -1,9 +1,9 @@
 <%
   def cannon_cluster?
-    OodAppkit.clusters.map(&:id).include?('odyssey3')
+    OodAppkit.clusters.map(&:id).include?('odyssey3'.to_sym)
   end
 
   def fasse_cluster?
-    OodAppkit.clusters.map(&:id).include?('fasse')
+    OodAppkit.clusters.map(&:id).include?('fasse'.to_sym)
   end
 %>
