--- a/ondemand/ondemand.d.local/support_ticket.yml.erb
+++ b/ondemand/ondemand.d.local/support_ticket.yml.erb
@@ -5,12 +5,12 @@ support_ticket:
     user: "<%= @rt_api_user %>"
     pass: "<%= @rt_api_pass %>"
     priority: "<%= @rt_priority %>"
-  <% if @rt_queues.length -%>
-  queues:
-  <% @rt_queues.each do |queue| -%>
-    - "<%= queue %>"
-  <% end -%>
-  <% end -%>
-  <% unless @rt_proxy_server.nil? -%>
+  <%- if @rt_queues.length -%>
+    queues:
+  <%- @rt_queues.each do |queue| -%>
+      - "<%= queue %>"
+  <%- end -%>
+  <%- end -%>
+  <%- unless @rt_proxy_server.nil? -%>
     proxy: "<%= @rt_proxy_server %>"
-  <% end -%>
+  <%- end -%>
